<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTodoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarTodo"
        app:navigationIcon="@drawable/ic_arrow"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:title="@string/text_create_todo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarTodo"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtTitle"
                android:hint="@string/text_title"
                style="@style/StyleEditText"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtSecond"
                android:hint="@string/text_description"
                style="@style/StyleEditText" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnDate"
            android:text="@string/text_select_date"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:gravity="start|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
            android:id="@+id/btnSave"
            android:text="@string/text_save"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>